# mvs-splatting

./: README.md  index.html
MVSGaussian/: README.md  run.py
MVSGaussian/configs/mvsgs/: benchmark_eval.yaml
MVSGaussian/lib/colmap/: imgs2poses.py
MVSGaussian/lib/colmap/poses/: pose_utils.py
MVSGaussian/lib/datasets/colmap/: mvsgs.py
MVSGaussian/lib/evaluators/: mvsgs.py
MVSGaussian/lib/gaussian_renderer/: __init__.py
MVSSplatting/: .gitignore  CMakeLists.txt  README.md
MVSSplatting/src/: CameraParams.h  FrameBufferController.h  Gui.h  KeyViewsCalculator.h  MultiViewStereo.h  Shader.h  ShaderController.h  SplatGenerator.h  TexController.h  main.cpp
MVSSplatting/src/shaders/: copy_tex.fs  depthmap.fs  depthmap.vs  error2depth0.fs  error2depth1.fs  mask_bad_pixels3.fs  quad_depth_error.fs  remove_floaters.fs  sfm_points.fs  sfm_points.vs  sum_radius2.fs  write_splats.gs  write_splats.vs
datasets/: README.md
gausian-splatting/: .gitignore  README.md  read_log.py  train_benchmark.py
gausian-splatting/arguments/: __init__.py
gausian-splatting/scene/: __init__.py  dataset_readers.py  gaussian_model.py
